--- a/rules/ec2.yaml
+++ b/rules/ec2.yaml
@@ -18,7 +18,6 @@ spec:
       labels:
         rule_source: opswatch-prometheus-rules
         severity: critical
-        asy_itsm_severity: high
       expr: aws_cloudwatch_EC2_StatusCheckFailedInstance_InstanceId > 0
       for: 30m
     - alert: AwsCloudwatchEc2StatusCheckFailedSystem
@@ -29,7 +28,6 @@ spec:
       labels:
         rule_source: opswatch-prometheus-rules
         severity: critical
-        asy_itsm_severity: high
       expr: aws_cloudwatch_EC2_StatusCheckFailedSystem_InstanceId > 0
       for: 30m
     - alert: AwsCloudwatchEc2CPUCreditBalanceCritical
@@ -42,16 +40,6 @@ spec:
         severity: critical
       expr: aws_cloudwatch_EC2_CPUCreditBalance_InstanceId{ec2_credits_mode!="unlimited"} < 10
       for: 30m
-    # - alert: AwsCloudwatchEc2CPUCreditBalanceWarning
-    #   annotations:
-    #     summary: EC2 CPU Credit is low below 20
-    #     description: EC2 CPU Credit is at {{$value}} for instance {{ $labels.dimension_InstanceId }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
-    #     runbook_url: https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/burstable-credits-baseline-concepts.html
-    #   labels:
-    #     rule_source: opswatch-prometheus-rules
-    #     severity: warning
-    #   expr: aws_cloudwatch_EC2_CPUCreditBalance_InstanceId < 20
-    #   for: 30m
     - alert: AwsCloudwatchEc2CPUCreditBalancePrediction
       annotations:
         summary: EC2 CPU Credit balance will be below 10 in 2 hours
@@ -69,7 +57,7 @@ spec:
         runbook_url: https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/burstable-credits-baseline-concepts.html
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: warning
+        severity: info
       expr: aws_cloudwatch_EC2_CPUSurplusCreditsCharged_InstanceId > 10
       for: 30m
     - alert: AwsCloudwatchEc2CPUUtilizationHigh
