--- a/rules/backup.yaml
+++ b/rules/backup.yaml
@@ -15,9 +15,10 @@ spec:
         summary: AWS backup job failed
         description: AWS backup job failed for vault {{ $labels.dimension_BackupVaultName }} with resource type {{ $labels.dimension_ResourceType }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://docs.aws.amazon.com/aws-backup/latest/devguide/troubleshooting.html
-      expr: aws_cloudwatch_Backup_NumberOfBackupJobsFailed_BackupVaultName_ResourceType{dimension_ResourceType !~ "(S3|RESOURCE_NOT_SUPPORTED)"} > 0
+      expr: aws_cloudwatch_Backup_NumberOfBackupJobsFailed_BackupVaultName_ResourceType{dimension_ResourceType!~"(S3|RESOURCE_NOT_SUPPORTED)"} > 0
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
-        asy_itsm_severity: medium
+        severity: warning
+        alarm_class: REACTIVE
+        alarm_scope: INTERNAL
