--- a/rules/rds.yaml
+++ b/rules/rds.yaml
@@ -19,7 +19,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: warning
+        severity: info
     - alert: AwsCloudwatchRdsDDLLatencyCritical
       annotations:
         summary: RDS DDLLatency is greater than 50ms
@@ -28,7 +28,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
+        severity: warning
     - alert: AwsCloudwatchRdsReadLatencyWarning
       annotations:
         summary: RDS ReadLatency is greater than 20ms
@@ -37,7 +37,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: warning
+        severity: info
     - alert: AwsCloudwatchRdsReadLatencyCritical
       annotations:
         summary: RDS ReadLatency is greater than 50ms
@@ -46,7 +46,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
+        severity: warning
     - alert: AwsCloudwatchRdsWriteLatencyWarning
       annotations:
         summary: RDS WriteLatency is greater than 20ms
@@ -55,7 +55,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: warning
+        severity: info
     - alert: AwsCloudwatchRdsWriteLatencyCritical
       annotations:
         summary: RDS WriteLatency is greater than 50ms
@@ -64,7 +64,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
+        severity: warning
     - alert: AwsCloudwatchRdsDeleteLatencyyWarning
       annotations:
         summary: RDS DeleteLatency is greater than 20ms
@@ -73,7 +73,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: warning
+        severity: info
     - alert: AwsCloudwatchRdsDeleteLatencyCritical
       annotations:
         summary: RDS DeleteLatency is greater than 50ms
@@ -82,7 +82,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
+        severity: warning
     - alert: AwsCloudwatchRdsUpdateLatencyWarning
       annotations:
         summary: RDS UpdateLatency is greater than 20ms
@@ -91,7 +91,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: warning
+        severity: info
     - alert: AwsCloudwatchRdsUpdateLatencyCritical
       annotations:
         summary: RDS UpdateLatency is greater than 50ms
@@ -100,7 +100,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
+        severity: warning
     - alert: AwsCloudwatchRdsCommitLatencyWarningSingleAz
       annotations:
         summary: RDS CommitLatency is greater than 20ms (single az)
@@ -109,7 +109,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: warning
+        severity: info
     - alert: AwsCloudwatchRdsCommitLatencyWarningMultiAz
       annotations:
         summary: RDS CommitLatency is greater than 30ms (multi az)
@@ -118,7 +118,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: warning
+        severity: info
     - alert: AwsCloudwatchRdsCommitLatencyWarningAurora
       annotations:
         summary: RDS CommitLatency is greater than 60ms (aurora)
@@ -136,7 +136,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
+        severity: warning
     - alert: AwsCloudwatchRdsBurstBalanceCritical
       annotations:
         summary: RDS burst balance is below 10%
@@ -145,7 +145,6 @@ spec:
       labels:
         rule_source: opswatch-prometheus-rules
         severity: critical
-        asy_itsm_severity: high
       expr: round(aws_cloudwatch_RDS_BurstBalance_DBInstanceIdentifier) < 10
       for: 30m
     - alert: AwsCloudwatchRdsBurstBalancePrediction
@@ -155,8 +154,7 @@ spec:
         runbook_url: https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/burstable-credits-baseline-concepts.html
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
-        asy_itsm_severity: medium
+        severity: warning
       expr: round(predict_linear(aws_cloudwatch_RDS_BurstBalance_DBInstanceIdentifier[30m], 3600 * 2)) < 10
       for: 30m
     - alert: AwsCloudwatchRdsCPUCreditBalanceCritical
@@ -167,7 +165,6 @@ spec:
       labels:
         rule_source: opswatch-prometheus-rules
         severity: critical
-        asy_itsm_severity: high
       expr: round(aws_cloudwatch_RDS_CPUCreditBalance_DBInstanceIdentifier) < 10
       for: 30m
     - alert: AwsCloudwatchRdsCPUCreditBalancePrediction
@@ -177,8 +174,7 @@ spec:
         runbook_url: https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/burstable-credits-baseline-concepts.html
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
-        asy_itsm_severity: medium
+        severity: warning
       expr: round(predict_linear(aws_cloudwatch_RDS_CPUCreditBalance_DBInstanceIdentifier[30m], 3600 * 2)) < 10
       for: 30m
     - alert: AwsCloudwatchRDSCPUUtilizationHigh
@@ -189,7 +185,7 @@ spec:
         rule_source: opswatch-prometheus-rules
         severity: warning
       expr: round(aws_cloudwatch_RDS_CPUUtilization_DBInstanceIdentifier) > 90
-      for: 30m
+      for: 60m
     - alert: AwsCloudwatchRdsEBSByteCreditBalanceCritical
       annotations:
         summary: RDS EBS Byte Credit balance is low below 10
@@ -198,7 +194,6 @@ spec:
       labels:
         rule_source: opswatch-prometheus-rules
         severity: critical
-        asy_itsm_severity: high
       expr: aws_cloudwatch_RDS_EBSByteBalance_DBInstanceIdentifier{rds_engine!~".*aurora.*"}  < 10
       for: 30m
     - alert: AwsCloudwatchRdsEBSByteCreditBalancePrediction
@@ -208,8 +203,7 @@ spec:
         runbook_url: https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/burstable-credits-baseline-concepts.html
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
-        asy_itsm_severity: medium
+        severity: warning
       expr: round(predict_linear(aws_cloudwatch_RDS_EBSByteBalance_DBInstanceIdentifier{rds_engine!~".*aurora.*"}[30m], 3600 * 2)) < 10
       for: 30m
     - alert: AwsCloudwatchRdsEBSIOCreditBalanceCritical
@@ -220,7 +214,6 @@ spec:
       labels:
         rule_source: opswatch-prometheus-rules
         severity: critical
-        asy_itsm_severity: high
       expr: aws_cloudwatch_RDS_EBSIOBalance_DBInstanceIdentifier < 10
       for: 30m
     - alert: AwsCloudwatchRdsEBSIOCreditBalancePrediction
@@ -230,8 +223,7 @@ spec:
         runbook_url: https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/burstable-credits-baseline-concepts.html
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
-        asy_itsm_severity: medium
+        severity: warning
       expr: round(predict_linear(aws_cloudwatch_RDS_EBSIOBalance_DBInstanceIdentifier[30m], 3600 * 2)) < 10
       for: 30m
     - alert: AwsCloudwatchRdsDeadlocks
@@ -260,14 +252,13 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
-        asy_itsm_severity: medium
+        severity: warning
     - alert: AwsCloudwatchRdsAuroraReplicaLag
       annotations:
         summary: RDS aurora replica lag is more than 100ms
         description: RDS aurora replica lag is {{$value}}ms for DB instance {{ $labels.dimension_DBInstanceIdentifier }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
       expr: round(aws_cloudwatch_RDS_AuroraReplicaLag_DBInstanceIdentifier) > 100
-      for: 15m
+      for: 60m
       labels:
         rule_source: opswatch-prometheus-rules
         severity: warning
@@ -279,7 +270,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: warning
+        severity: info
     - alert: AwsCloudwatchRdsFreeLocalStorage
       annotations:
         summary: RDS free local storage is less than 4GB
@@ -289,8 +280,7 @@ spec:
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
-        severity: critical
-        asy_itsm_severity: medium
+        severity: warning
     - alert: AwsCloudwatchRdsFreeStoragePrediction
       annotations:
         summary: RDS free storage is predicted to run out
@@ -301,7 +291,6 @@ spec:
       labels:
         rule_source: opswatch-prometheus-rules
         severity: critical
-        asy_itsm_severity: high
     - alert: AwsCloudwatchRdsFreeStorage
       annotations:
         summary: RDS free storage is less than 2GB
@@ -312,29 +301,46 @@ spec:
       labels:
         rule_source: opswatch-prometheus-rules
         severity: critical
-        asy_itsm_severity: high
     - alert: AwsCloudwatchRdsClusterMaxConnections
       annotations:
-        summary: RDS connection count is more than 90%
+        summary: RDS connection count is more than 95%
         description: RDS connection count is {{$value}}% for DB cluster {{ $labels.dimension_DBClusterIdentifier }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/CHAP_Limits.html#RDS_Limits.MaxConnections
-      expr: round(aws_cloudwatch_RDS_DatabaseConnections_DBClusterIdentifier / aws_apidescribe_RDS_MaxConnections_DBClusterIdentifier * 100) > 90
+      expr: round(aws_cloudwatch_RDS_DatabaseConnections_DBClusterIdentifier / aws_apidescribe_RDS_MaxConnections_DBClusterIdentifier * 100) > 95
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
         severity: critical
-        asy_itsm_severity: high
-    - alert: AwsCloudwatchRdsInstanceMaxConnections
+    - alert: AwsCloudwatchRdsClusterMaxConnectionsWarning
       annotations:
-        summary: RDS connection count is more than 90%
+        summary: RDS connection count is more than 80%
+        description: RDS connection count is {{$value}}% for DB cluster {{ $labels.dimension_DBClusterIdentifier }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        runbook_url: https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/CHAP_Limits.html#RDS_Limits.MaxConnections
+      expr: round(aws_cloudwatch_RDS_DatabaseConnections_DBClusterIdentifier / aws_apidescribe_RDS_MaxConnections_DBClusterIdentifier * 100) > 80
+      for: 15m
+      labels:
+        rule_source: opswatch-prometheus-rules
+        severity: warning
+    - alert: AwsCloudwatchRdsInstanceMaxConnectionsCritical
+      annotations:
+        summary: RDS connection count is more than 95%
         description: RDS connection count is {{$value}}% for DB instance {{ $labels.dimension_DBInstanceIdentifier }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/CHAP_Limits.html#RDS_Limits.MaxConnections
-      expr: round(aws_cloudwatch_RDS_DatabaseConnections_DBInstanceIdentifier / aws_apidescribe_RDS_MaxConnections_DBInstanceIdentifier * 100) > 90
+      expr: round(aws_cloudwatch_RDS_DatabaseConnections_DBInstanceIdentifier / aws_apidescribe_RDS_MaxConnections_DBInstanceIdentifier * 100) > 95
       for: 15m
       labels:
         rule_source: opswatch-prometheus-rules
         severity: critical
-        asy_itsm_severity: high
+    - alert: AwsCloudwatchRdsInstanceMaxConnectionsWarning
+      annotations:
+        summary: RDS connection count is more than 80%
+        description: RDS connection count is {{$value}}% for DB instance {{ $labels.dimension_DBInstanceIdentifier }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+        runbook_url: https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/CHAP_Limits.html#RDS_Limits.MaxConnections
+      expr: round(aws_cloudwatch_RDS_DatabaseConnections_DBInstanceIdentifier / aws_apidescribe_RDS_MaxConnections_DBInstanceIdentifier * 100) > 80
+      for: 15m
+      labels:
+        rule_source: opswatch-prometheus-rules
+        severity: warning
     - alert: AwsCloudwatchRdsInstanceACUUtilizationHigh
       annotations:
         summary: RDS ACU utilization is more than 90%
